# pyabundance

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_issue.md  feature_request.md  statistical_concern.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml  testpypi-install.yml  wheels.yml
.omx/: metrics.json
.omx/logs/: turns-2026-06-03.jsonl
.omx/state/: notify-fallback-authority-owner.json  notify-fallback-authority-state.json  update-check.json
benchmark_artifacts/: README.md
benchmark_artifacts/v0.8.0/: BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_NB.md  BENCHMARK_RESULTS_ZIP.md  BENCHMARK_SUMMARY.md  FORMULA_OVERHEAD_BENCHMARK.md  PERFORMANCE_NOTES.md  POSTERIOR_ABUNDANCE_BENCHMARK.md  UNCERTAINTY_BENCHMARK.md  formula_overhead_benchmark.json  manifest.json  posterior_abundance_benchmark.json  py_benchmark.json  py_loglik_benchmark.json  py_nb_benchmark.json  py_nb_loglik_benchmark.json  py_zip_benchmark.json  py_zip_loglik_benchmark.json  r_benchmark.json  r_benchmark_v0.1_preflight.json  r_nb_benchmark.json  r_zip_benchmark.json  reporting_workflow.json  uncertainty_benchmark.json
benchmark_artifacts/v0.9.0/: BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_NB.md  BENCHMARK_RESULTS_ZIP.md  BENCHMARK_SUMMARY.md  COVERAGE_SUMMARY.md  DEPENDENCY_AUDIT.md  FORMULA_OVERHEAD_BENCHMARK.md  (+23 more)
benchmarks/: README.md  compare_benchmark_summary.py  compare_benchmarks.py  compare_nb_benchmarks.py  compare_ranef_with_r.py  compare_se_with_r.py  compare_zip_benchmarks.py  generate_pcount_dataset.py  generate_pcount_nb_dataset.py  generate_pcount_zip_dataset.py  profile_py_fit.py  run_formula_overhead_benchmark.py  run_posterior_abundance_benchmark.py  run_py_benchmark.py  run_py_loglik_benchmark.py  run_py_nb_benchmark.py  run_py_nb_loglik_benchmark.py  run_py_zip_benchmark.py  run_py_zip_loglik_benchmark.py  run_r_unmarked_benchmark.R  run_r_unmarked_nb_benchmark.R  run_r_unmarked_ranef_comparison.R  run_r_unmarked_se_comparison.R  run_r_unmarked_zip_benchmark.R  run_rc2_ux_benchmark.py  run_reporting_workflow.py  run_uncertainty_benchmark.py
crates/ecoabundance-core/: Cargo.toml
crates/ecoabundance-core/examples/: pcount_poisson_benchmark.rs
crates/ecoabundance-core/src/: distributions.rs  errors.rs  lib.rs  math.rs  pcount_negbin.rs  pcount_poisson.rs  pcount_zip.rs  simulation.rs
crates/ecoabundance-py/: Cargo.toml
crates/ecoabundance-py/src/: lib.rs  pcount.rs  pcount_negbin.rs  pcount_zip.rs
docs/: CONTRIBUTOR_ONBOARDING.md  FORMULA_API.md  GUIDED_ANALYSIS.md  INSTALLATION.md  K_SELECTION.md  LIMITATIONS.md  MODEL_SELECTION_REPORTING.md  PCOUNT_PARAMETER_MAPPING.md  POSTERIOR_ABUNDANCE.md  QUICKSTART.md  ROADMAP.md  UNCERTAINTY.md  index.md
examples/: external_alpha_smoke.py  pcount_dataframe_basic.py  pcount_dataframe_observation_covariates.py  pcount_model_selection.py  pcount_reporting.py
reports/: API_FREEZE_REVIEW_1.0.0rc1.md  BENCHMARK_INDEX_RC1.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_NB.md  BENCHMARK_RESULTS_ZIP.md  CI_WORKFLOWS.md  EXTERNAL_ALPHA_PACKET.md  PERFORMANCE_NOTES.md  POSTERIOR_ABUNDANCE_BENCHMARK.md  RC1_READINESS_AUDIT.md  README.md  R_PARITY_REFRESH_0.9.md  R_PARITY_REFRESH_RC1.md  TESTPYPI_INSTALL_MATRIX.md  TESTPYPI_REHEARSAL_RC1.md  UNCERTAINTY_BENCHMARK.md  cargo_tree_rc1.txt  formula_overhead_benchmark.json  pip_list_rc1.txt  profile_py_fit.txt  py_benchmark.json  py_loglik_benchmark.json  py_nb_benchmark.json  py_se_comparison.json  py_zip_loglik_benchmark.json  r_benchmark.json  r_nb_benchmark.json  uncertainty_benchmark.json
scripts/: check_dist_metadata.py  check_github_actions.py  check_repo_hygiene.py  preserve_benchmark_artifacts.py  smoke_test_installed.py  smoke_test_sdist.py  smoke_test_wheel.py
specs/: clean_room_policy.md  numerical_stability.md  pcount_negative_binomial.md  pcount_poisson.md  pcount_zero_inflated_poisson.md  r_parity_protocol.md
tests/: __init__.py  test_analysis_explain.py  test_analyze_pcount.py  test_analyze_pcount_report.py  test_coef_table_dataframe_option.py  test_compare_models_names.py  test_confint.py  test_core_fitlist.py  test_core_formulas.py  test_core_predict.py  test_core_result_protocol.py  test_core_simulate.py  test_core_specs.py  test_diagnostics.py  test_example_datasets.py  test_external_alpha_smoke.py  test_formula_matrices.py  test_formula_obs_covariates.py  test_frame_pcount.py  test_github_actions.py  test_guided_workflow_quickstart.py  test_import.py  test_k_selection.py  test_mallard_validation_scripts.py  test_missing_values.py  test_model_selection.py  test_negbin_pmf.py  test_parametric_bootstrap.py  test_pcount_df_errors.py  test_pcount_df_negbin.py  test_pcount_df_poisson.py  test_pcount_df_zip.py  test_pcount_fit.py  test_pcount_formula_newdata_prediction.py  test_pcount_loglik.py  test_pcount_mixture_aliases.py  test_pcount_negbin_fit.py  test_pcount_negbin_loglik.py  test_pcount_negbin_problem_object.py  test_pcount_parameter_mapping.py  (+32 more)
(+107 files in other folders)
