[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "pyabundance"
version = "0.1.0"
description = "Clean-room Rust + Python ecological abundance modelling library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "pyabundance contributors" }]
keywords = ["ecology", "abundance", "n-mixture", "rust", "python"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]
dependencies = ["numpy", "scipy", "pandas"]

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark", "ruff", "mypy", "maturin"]

[tool.maturin]
manifest-path = "crates/ecoabundance-py/Cargo.toml"
python-source = "python"
module-name = "pyabundance._core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
