[package]
name = "ecoabundance-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PyO3 bindings exposing pyabundance Rust numerical kernels to Python"
repository = "https://github.com/pyabundance/pyabundance"
homepage = "https://github.com/pyabundance/pyabundance"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
ecoabundance-core = { path = "../ecoabundance-core" }
numpy = "0.23"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
